metadata/force-app/main/default/objects/CustomName_YGDHH__c/CustomName_YGDHH__c.object-meta.xml
<CustomObject>
    <description>Description_OJFDC</description>
    <label>CustomLabel_CwWqk</label>
    <nameField>
        <label>CustomLabel_CwWqk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_CwWqks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>