metadata/force-app/main/default/objects/CustomName_YGDHH__c/fields/CustomField_mBnKO__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mBnKO__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVGukl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>