metadata/force-app/main/default/objects/CustomName_YGDHH__c/fields/CustomField_mSodM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mSodM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldyfvZu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>